# Haru-diary

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: ✅-feature.md  🐞-bug.md
account/: urls.py  views.py
config/: settings.py  urls.py
config/settings/: base.py  prod.py
haru/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
haru/migrations/: 0001_initial.py  0002_alter_diary_create_date.py  0003_diary_author.py  0004_diary_angry_diary_disgust_diary_fear_diary_happiness_and_more.py  0005_diary_primary_emotion_diary_secondary_emotion.py  0006_emoji.py  0007_emoji_emotion.py
nginx/: Dockerfile  nginx.conf
static/: style.css
templates/: base.html  form_errors.html  navbar.html
templates/account/: login.html  signup.html
templates/haru/: calendar.html  diary_form.html  diary_view.html  diary_write.html  fullcalendar.html  statistics.html
