[tool.poetry]
name = "haru"
version = "0.1.0"
description = ""
authors = ["seonghyunJung <tjdgusus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"
black = "^23.3.0"
djlint = "^1.22.0"
requests = "^2.28.2"
django-debug-toolbar = "^4.0.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
